@@ -16,6 +16,8 @@ CPSDocument.validateStoreRender() : **kw instead of *kw
 - Fixed bad url links in layout_faq_view.pt
 - #1005 : forbid mix workspace and sections
 - Removed useless dummy vocabulary. This is a part of the fix for #700.
+- #1092: Flash Animation Document type was using 'preview' for the flash file
+         fieldname. Name collisions where making several problems in metadatas.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - code cleaning
